# gtakpsi-rush-app

./: SPECULATIVE_WORD_BANK_README.md  package-lock.json  pis_questions.json  pis_timeslots.json  rush_nights.json  setup.py
broadcaster/: Cargo.toml
broadcaster/src/: admin_socket.rs  db.rs  main.rs  voter_socket.rs
client/: env.d.ts  index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.jsx  index.css
client/src/components/: Badge.jsx  Button.jsx  CollaborativeTextarea.jsx  CommentWarning.jsx  Error.jsx  Loader.jsx  Navbar.jsx  VoiceRecorder.jsx  VoiceTranscriptionHandler.jsx
client/src/components/AttendanceComponents/: DisplayInfo.jsx  SplashPage.jsx  SuccessPage.jsx
client/src/components/RegisterComponents/: BasicInfo.jsx  GetImage.jsx  PisSignUp.jsx  SuccessPage.jsx
client/src/hooks/: useCollaboration.js
client/src/js/: speculativeWordBank.js  speculativeWordBank.test.js  timezone.js  voiceRecording.js
client/src/pages/: Admin.jsx  BidCommitteeDashboard.jsx  BrotherPIS.jsx  Comments.jsx  Dashboard.jsx  GTIDSearch.jsx  Home.jsx  Login.jsx  PIS.jsx  Register.jsx  RusheePage.jsx  RusheeZoom.jsx
client/src/pages/AdminVotingDashboardComponents/: AdminVotingContext.tsx  BrotherList.tsx  (+6 more)
scripts/: data_pull.py  pis_excel_sheet.py
server/: Cargo.toml
server/src/: main.rs
server/src/controllers/: admin.rs  db.rs  mod.rs  rushee.rs  voting.rs
server/src/middlewares/: mod.rs  rushee.rs  voting.rs
server/src/models/: Rushee.rs  mod.rs  pis.rs
websocket-server/: .gitignore  package-lock.json  package.json  server.js
(+6 files in other folders)
