[package]
name = "broadcaster"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version="0.6", features=["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.21"
dashmap = "5"
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"